<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:hint="@string/enter_address"
        android:inputType="text"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/conNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:hint="@string/enter_contact_number"
        android:inputType="number"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/save"
        android:layout_below="@id/conNum"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btn_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/show"
        android:layout_toRightOf="@id/btn_save"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/conNum"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/update"
        android:layout_toRightOf="@id/btn_show"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/conNum"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/delete"
        android:layout_toRightOf="@id/btn_update"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/conNum"
        android:layout_marginTop="50dp"/>
</RelativeLayout>